# altairsim

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  DESIGN.md  DISTRIBUTION.md  LICENSE  README.md  TODO.md  build.bat  build.sh
.github/workflows/: ci.yml  cpu-exerciser-release.yml  cpu-exerciser.yml  docs.yml
Testing/: README.md  bothsweep.sh  cablecheck.py  hostrecv.exp  hostsend.exp  nap6.sh  sys1.toml.in  sys2.toml.in  xmodem.py
cmake/: embed_machines.cmake  embed_roms.cmake  lint_platform.cmake  version.h.in
cpm/hostbridge/: HB.INC  HDIR.ASM  HDIR.COM  HDIR.HEX  HDIR.PRN  R.ASM  R.COM  R.HEX  R.PRN  README.md  W.ASM  W.COM  W.HEX  W.PRN
docs/: USING-ALTAIRSIM.md  building-linux.md  building-windows.md  cli-commands.md  cli-transcripts.md  config.md  package.map  porting-notes.md  print.css  printing.md  roadmap.md  roms.md  sources.md
docs/attic/: cli-transcripts.md
docs/boards/: 88-2sio.md  88-cpu.md  88-dcdd.md  _TEMPLATE.md  cromemco-dazzler.md  hostbridge.md  memory.md  mits-2sio.md  mits-884pio.md  mits-88acr.md  mits-88c700.md  mits-88cpu.md  mits-88hdsk.md  mits-88mds.md  mits-88pio.md  mits-88sio.md  mits-88virtc.md  mits-dcdd.md  mits-frontpanel.md  mits-turnkey.md  mits-z80cpu.md  pmmi-mm103.md  proctech-sol.md  proctech-vdm1.md  s100-memory.md  tarbell-sd.md
docs/changelog/: ORDER  changelog.md
docs/devguide/: ORDER  README.md  adding-a-board.md  building.md  theory.md
docs/fonts/: LICENSE-XCharter.txt  README.md
docs/manual/: ORDER  README.md  boards.md  configuring.md  debugging.md  disks.md  examples.md  file-transfer.md  glossary.md  introduction.md  machines.md  mcp.md  monitor.md  package.md  quick-start.md  running.md  serial.md  tapes.md  troubleshooting.md  whats-new.md
examples/: README.md
examples/basic/: 4K BASIC Ver 3-1.tap  README.md  basic4k.toml
examples/cpm/: README.md  cpm22-buffered.toml
examples/dazzler/: KSCOPE.ASM  KSCOPE.HEX  KSCOPE.PRN  README.md  kscope.toml
examples/debugger/: HELLO.ASM  HELLO.HEX  HELLO.PRN  README.md  debugger.toml
examples/diskbasic/: README.md  diskbasic.toml
examples/hdsk/: README.md  hdsk.toml
examples/sol/: README.md  TREK80.ENT  TRK80.TAP  atc.toml  make-trek80-tape.sh  pacman.toml  raiders.toml  trek80.toml
examples/turnkey/: README.md  floppy.toml  hdsk.toml
investigations/cuts-write-path/: FINDINGS.md  README-TEST.md  STATUS.md  analyze.py  measure.py  modem.py
machines/: 4k.toml  acuter.toml  altmon.toml  amon.toml  basic4k.toml  basic8k.toml  cdbl.toml  cuter.toml  dazzler.toml  dbl.toml  default.toml  lineprinter.toml  minidisk.toml  parallel.toml  ps2.toml  ps2int.toml  sol20.toml  turnkey.toml  vdm1.toml  z80.toml
reference/: 6850.md  88-C700 Centronics Printer Controller.md  88-HDSK.md  88-MDS Minidisk Manual.md  88-MDS Minidisk Schematics.md  88-SIO Rev 0 & 1.md  88-VI-RTC.md  Altair 2SIO User's Manual.md  Altair 88-ACR Cassette Interface.md  Altair 8800 Operators Manual.md  Altair 8800 Theory of Operation.md  Altair 8800 front panel schematic.md  Altair Floppy (88-DCDD) Manual.md  CPM 2.2 Manual.md  CUTS Assembly and Test.md  Cromemco Dazzler.md  FDC+ Manual.md  MITS 88-4PIO.md  MITS 88-PIO.md  MITS Turn Key Board.md  Microsoft L80 Linker.md  Microsoft M80 Assembler.md  Minidisk Info from MITS.md  Processor Technology VDM-1.md  README.md  SOLOS.md  Sol-20.md  Tarbell_Floppy_Disk_Interface_Manual.md  TurnKey Board.md  Western Digital FD1771 - Datasheet.md  Western Digital WD177X-00 - Datasheet.md  Zilog Z80.md  com2502.md  hexfrmt.md
roms/ACUTER/: ACUTER.ASM  ACUTER.HEX  ACUTER.PRN  README.md
roms/ALTMON/: ALTMON.ASM  ALTMON.HEX  ALTMON.PRN
roms/AMON/: README.md
roms/CDBL/: CDBL.ASM  CDBL.HEX  CDBL.PRN  README.md
roms/CUTER/: CUTER13.ASM  CUTER13.HEX  CUTER13.PRN  README.md
roms/DBL/: DBL.ASM  DBL.HEX  DBL.PRN
roms/HDBL/: HDBL.ASM  HDBL.HEX  HDBL.PRN  README.md
roms/MDBL/: MDBL.ASM  MDBL.HEX  MDBL.PRN
roms/SOLOS/: README.md  SOLOS13.ASM  SOLOS13.PRN
roms/TARBELL-SD/: TARPROM.ASM
roms/VDM1DEMO/: README.md  VDM1DEMO.ASM  VDM1DEMO.HEX
src/: main.cpp
src/boards/: cpu8080.cpp  cpu8080.h  cromemco-dazzler.cpp  cromemco-dazzler.h  hostbridge.cpp  hostbridge.h  memory.cpp  memory.h  mits-2sio.cpp  mits-2sio.h  mits-884pio.cpp  mits-884pio.h  mits-88acr.cpp  mits-88acr.h  mits-88c700.cpp  mits-88c700.h  mits-88cpu.cpp  mits-88cpu.h  mits-88dcdd.cpp  mits-88dcdd.h  mits-88hdsk.cpp  mits-88hdsk.h  mits-88mds.cpp  mits-88mds.h  mits-88pio.cpp  mits-88pio.h  mits-88sio.cpp  mits-88sio.h  mits-88virtc.cpp  mits-88virtc.h  mits-frontpanel.cpp  mits-frontpanel.h  mits-hardsector.cpp  mits-hardsector.h  mits-turnkey.cpp  mits-turnkey.h  mits-z80cpu.cpp  mits-z80cpu.h  proctech-sol.cpp  proctech-sol.h  (+9 more)
src/chips/: mc6850.cpp  mc6850.h  sio2port.cpp  sio2port.h  uart1602.cpp  uart1602.h  wd17xx.cpp  wd17xx.h
src/cli/: commands.cpp  commands.h  lineedit.cpp  lineedit.h  monitor.cpp  monitor.h
src/config/: toml.cpp  toml.h
src/core/: board.cpp  board.h  bus.cpp  bus.h  clock.cpp  clock.h  command.h  crc32.cpp  crc32.h  debug.cpp  debug.h  expr.cpp  expr.h  hex.cpp  hex.h  machine.cpp  machine.h  machines.cpp  machines.h  paths.cpp  paths.h  roms.cpp  roms.h  spindle.cpp  (+9 more)
tapes/: LDR4K31.ASM  LDR4K31.HEX  LDR4K31.PRN
tests/: cputest.cpp  main.cpp  serialtest.cpp  sockettest.cpp  test.h  test_4pio.cpp  test_88acr.cpp  test_88sio.cpp  test_boundary.cpp  test_bus.cpp  test_c700.cpp  test_cli.cpp  test_clock.cpp  test_cpu.cpp  test_dazzler.cpp  test_dcdd.cpp  test_ddt.cpp  test_debug.cpp  test_dma.cpp  test_expr.cpp  test_frontpanel.cpp  test_hdsk.cpp  test_hex.cpp  test_hostbridge.cpp  test_hostdir.cpp  test_isa.cpp  test_lamp.cpp  test_lines.cpp  test_machines.cpp  test_mcp.cpp  test_mds.cpp  test_media.cpp  test_memory.cpp  test_numbers.cpp  test_phantom.cpp  test_pio.cpp  test_roms.cpp  test_sio2.cpp  test_snapshot.cpp  test_sol.cpp  (+12 more)
tools/: build-checksums.sh  build-docs.sh  build-package.sh  build-sdl3-static.bat  build-sdl3-static.sh  fetch-ci-binaries.sh  fetch-disk-images.sh  gen-reference.cpp  install-hostbridge-utils.sh  tapetool.cpp
(+152 files in other folders)
